# WoWLib

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
cmake/: compiler_flags.cmake  file_globbing.cmake
codegen/structures/: builtin_types.py  codegen.py  config.py  cxx_struct.py  cxx_type.py  main.py  test.py  utils.py
src/Config/: CodeZones.hpp
src/IO/: ByteBuffer.cpp  ByteBuffer.hpp  ByteBuffer.inl  Common.cpp  Common.hpp  Common.inl  CommonChunkIdentifiers.hpp  CommonConcepts.hpp  CommonDataStructures.hpp  CommonTraits.hpp  WorldConstants.hpp
src/IO/ADT/: ADTFile.cpp  ADTFile.hpp  ChunkIdentifiers.hpp  DataStructures.hpp
src/IO/ADT/Root/: ADTRoot.cpp  ADTRoot.hpp  ADTRoot.inl  ADTRootMCNK.cpp  ADTRootMCNK.hpp  ADTRootMCNK.inl  MH2O.cpp  MH2O.hpp
src/IO/ADT/Tex/: ADTTex.cpp  ADTTex.hpp  ADTTex.inl  ADTTexMCNK.cpp  ADTTexMCNK.hpp  MCAL.cpp  MCAL.hpp  MCAL.inl  MCSH.cpp  MCSH.hpp
src/IO/Storage/: ClientStorage.cpp  ClientStorage.hpp  FileKey.cpp  FileKey.hpp  FileKey.inl  Listfile.cpp  Listfile.hpp  ListfileManager.cpp  ListfileManager.hpp
src/IO/Storage/Archives/: CASCArchive.cpp  CASCArchive.hpp  IArchive.hpp  MPQArchive.cpp  MPQArchive.hpp
src/IO/Storage/ClientLoaders/: BaseLoader.cpp  BaseLoader.hpp  CASCLoader.cpp  CASCLoader.hpp  ClassicLoader.cpp  ClassicLoader.hpp  MPQLoader.cpp  MPQLoader.hpp  MPQLoader.inl  WotLKLoader.cpp  WotLKLoader.hpp
src/IO/WDT/: ChunkIdentifiers.hpp  DataStructures.hpp  WDTLight.hpp  WDTOcclusion.hpp  WDTRoot.hpp
src/Utils/: PathUtils.cpp  PathUtils.hpp
src/Utils/Meta/: Algorithms.hpp  Concepts.hpp  DataTypes.hpp  Future.hpp  ProtocolHelpers.hpp  Reflection.hpp  Templates.hpp  Templates.inl  Traits.hpp
src/Utils/Misc/: CurrentFunction.hpp  ForceInline.hpp
src/Validation/: Contracts.hpp  Log.cpp  Log.hpp  Tests.hpp
tests/: ContractsTest.cpp  LoggingTest.cpp  MetaAlgorithms.cpp  ReflectionTest.cpp  StorageTest.cpp  TraitsTest.cpp
